objects/User.object
<CustomObject>
    <fields>
        <fullName>About__c</fullName>
        <label>About</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acc_Name_Enc__c</fullName>
        <formula>IF( CONTAINS(Contact.Account.Name, &quot;&amp;&quot;) , SUBSTITUTE(Contact.Account.Name, &quot;&amp;&quot;, &quot;%26&quot;), Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Name URL ENCODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Is_TPS__c</fullName>
        <formula>includes(Contact.Account.NH_SSE_Type__c, &apos;TPS&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Is TPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <label>Admin Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allow_Financier_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for allowing access to users to change the Financier Information of the submitted PO</description>
        <label>Allow Financier Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <description>GPP-Story1- This field is created for GPP Project. This replaces various checkboxes with one field that will be assigned to a partner user. Based on the values assigned to a user, user will be authorized to perform various activities on the platform. This field will work in conjunction with Corporate Business Functions which will be controlled by SPWR internal users.</description>
        <label>Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>Create Cash Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Lease Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Loan Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services Team Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services Product SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create ManualMode Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Equinox Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurora Design Licensee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Aurora Design Licensee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create PPA Quote</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Global Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPP Intl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPP Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPassValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Lead_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Lead Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_LoanPath_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this user will bypass all the validations related to LoanPath Implentation (Credit Check Process). Namely the validation rules are:
a.	Object: Account  Loan_Path_Validation_Address_Change
b.	Object: Contact  Loan_Path_Validation_Name_Change
c.	Object: Opportunity  AccountName_PrimaryContact_No_Change</description>
        <label>Bypass LoanPath Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to bypass workflow rules to prevent firing/re-firing of unnecessary WF rules and notifications when mass updating records.
Release WW 39 - 2016</description>
        <label>Bypass Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPR_Salesperson_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPR Salesperson ID</label>
        <length>42</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Case Number where approval was obtained to create new user.</description>
        <inlineHelpText>Case Number where approval was obtained to create new user.</inlineHelpText>
        <label>Case Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CounterSignature__c</fullName>
        <label>CounterSignature</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryDomainText__c</fullName>
        <description>Project: GPP
Description: Text Value of Country Domain on User Record</description>
        <formula>TEXT(Country_Domain__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountryDomainText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Domain__c</fullName>
        <description>Used by external design applications to show country-specific content in the Partner Portal and in the external design applications.  Used for both SunPower and Partner Users.  For Partner users this value should default to the Account.Country_Domain.</description>
        <label>Country Domain</label>
        <picklist>
            <picklistValues>
                <fullName>rvar-us</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>rvar-es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rvar-it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rvar-de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rvar-fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rvar-be</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-be</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-be</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rvar-uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rvar-au</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-au</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-au</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-rl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rvar-rl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-rl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rvar-jp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cvar-jp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>combo-jp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Data_Scout_Profile__c</fullName>
        <description>Cloud MDM: enter the name of the Cloud MDM profile for this user. If no Cloud MDM Profile is specified, the default profile will be used</description>
        <inlineHelpText>Cloud MDM: enter the name of the Cloud MDM profile for this user. If no Cloud MDM Profile is specified, the default profile will be used</inlineHelpText>
        <label>Cloud MDM Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Privacy preference - Not to be called.</description>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Regions__c</fullName>
        <description>SPD: Priti Rastogi- This field will contain Energy Consultant;s regions for reporting purposes.</description>
        <label>EC Regions</label>
        <picklist>
            <picklistValues>
                <fullName>NorCal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoCal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Edit_Partner_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Edit Partner Users</description>
        <label>Edit Partner Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forum_Password__c</fullName>
        <label>Forum Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIS_Expiration_Date__c</fullName>
        <description>Loan- Created for Loan project to capture HIS expiration date. Partner Onboarding team will maintain the data</description>
        <label>HIS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HIS_Registration_Number__c</fullName>
        <description>Loan- Created for Loan project to capture user&apos;s registration number. Only users with valid number can quote a Loan product. To be maintained by Partner on-boarding team.</description>
        <label>HIS Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <description>For Migration</description>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LMS_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To activate and de-activate a user in LMS</description>
        <inlineHelpText>Uncheck to Deactivate or Check to Activate this User in LMS</inlineHelpText>
        <label>LMS Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_ID__c</fullName>
        <label>LMS ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Supervisor_ID__c</fullName>
        <description>This is the LMS user ID of the training supervisor for the current user.</description>
        <label>LMS Supervisor ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Team__c</fullName>
        <label>Lead Team</label>
        <picklist>
            <picklistValues>
                <fullName>AE (Account Executive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSO</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_doc_creation_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease doc creation allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <formula>Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAC_Marketing__c</fullName>
        <label>NAC Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PVSIM_Access_Key__c</fullName>
        <label>PVSIM Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Ambassador_Rights__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner Ambassador Rights</description>
        <label>Partner Ambassador Rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <label>Partner Role</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Store_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine access to &quot;Partner Store&quot; tab.</description>
        <label>Partner Store Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Place_In_Service_Change_Authorize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Place In Service Change Authorized on Lease Payment Object.</description>
        <label>Place In Service Change Authorize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plateau_Id__c</fullName>
        <description>This is the external user ID used in the Plateau-LMS system.  This ID is generated by the Plateau HR-Connector tool when a new user is provisioned for LMS.  This field is required for all SunPower and Partner users that require access to the Plateau-LMS system.</description>
        <inlineHelpText>The Plateau-LMS user ID</inlineHelpText>
        <label>Plateau_Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User_Type__c</fullName>
        <description>To identify whether a Partner Portal user is active in SFDC or is an LMS Only user</description>
        <inlineHelpText>To identify whether a Partner Portal user is active in SFDC or is an LMS Only user</inlineHelpText>
        <label>Portal User Type</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC User</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>LMS Only User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_License_Type__c</fullName>
        <formula>TEXT( Profile.UserType)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Text__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Access__c</fullName>
        <label>Project Manager Access</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Creation_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_text__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA2_Account_Theater__c</fullName>
        <description>This field is used in Email template to display &quot;Portal login&quot; link based on Account Theater values.</description>
        <formula>TEXT(Contact.Account.Theater__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used in Email template to display &quot;Portal login&quot; link based on Account Theater values.</inlineHelpText>
        <label>SOA2 Account Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOX_Audit_Reviewed__c</fullName>
        <label>SOX Audit Reviewed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Profile_was_approval_received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SOX Profile, was approval received?</description>
        <inlineHelpText>You need approval to assign this SOX governed profile.</inlineHelpText>
        <label>SOX Profile, was approval received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPWR_Added_to_HIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPWR Added to HIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSO_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSO Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_PDF_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag is used to identify the user which can receive the uploaded transaction files email notification ( SOA Ph2)</description>
        <inlineHelpText>Flag is used to identify the user which can receive the uploaded transaction files email notification ( SOA Ph2)</inlineHelpText>
        <label>Send PDF Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartStore_ID__c</fullName>
        <label>Marketing Resource Center ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solutions_Editor__c</fullName>
        <label>Solutions Editor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Supervisor</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenesol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tenesol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>text( Contact.Account.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USERID_18character__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>USERID 18character</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Closed_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Closed Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Forecast_Category_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Update Forecast Category Allowed</description>
        <label>Update Forecast Category Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserContactRole__c</fullName>
        <label>User Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Appirio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birlasoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR - IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR - Ops</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Viewable_Inverters__c</fullName>
        <label>Viewable Inverters</label>
        <picklist>
            <picklistValues>
                <fullName>BOTH</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVAR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to find out the User is coming from Web or Not</description>
        <label>Web User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send Document Cloud agreements on behalf of this user.</description>
        <label>DC - Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in Document Cloud API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</inlineHelpText>
        <label>Document Cloud Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leankor__MyWorkspace__c</fullName>
        <description>The personal visual workspace for this user.</description>
        <inlineHelpText>Select any leankor board as your own personal workspace.</inlineHelpText>
        <label>My Workspace</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>leankor__Rate__c</fullName>
        <inlineHelpText>This is the hourly fully loaded rate for this person.</inlineHelpText>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sked__skeduloUserType__c</fullName>
        <label>skeduloUserType</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>ActivePartnerUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Partner Users</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActivePartnerUsers_ft</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Partner Users_ft</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users_INTERNAL</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active Users INTERNAL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Country_Domain__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cap_Gemini_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>capgemini.com</value>
        </filters>
        <label>Cap Gemini Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Connect_5_for_Reset</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>Connect 5</value>
        </filters>
        <label>Connect 5 for Reset</label>
        <language>en_US</language>
        <sharedTo>
            <role>ExecutiveManagement</role>
            <role>GlobalSupport</role>
            <role>ITHelpDesk</role>
            <role>ITHelpDeskManager</role>
            <role>SunpowerCorporation</role>
        </sharedTo>
    </listViews>
</CustomObject>